UI: don't expose actions that the driver does not support for network related resources

--- a/server/views/network_interfaces/index.html.haml
+++ b/server/views/network_interfaces/index.html.haml
@@ -1,5 +1,6 @@
 =header "Network Interfaces" do
-  %a{ :href => url_for('network_interfaces/new'), :'data-icon' => :plus, :'data-role' => :button, :class => 'ui-btn-right'} Create new Network Interface
+  - if driver.respond_to?(:create_network_interface)
+    %a{ :href => url_for('network_interfaces/new'), :'data-icon' => :plus, :'data-role' => :button, :class => 'ui-btn-right'} Create new Network Interface
 
 %div{ :'data-role' => :content, :'data-theme' => 'c'}
   %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'a'}
