--- a/server/views/networks/show.html.haml
+++ b/server/views/networks/show.html.haml
@@ -22,4 +22,5 @@
     %li{ :'data-role' => 'list-divider'} Actions
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
-        =link_to_action "Destroy", destroy_network_url(@network.id), :delete
+        - if driver.respond_to?(:destroy_network)
+          =link_to_action "Destroy", destroy_network_url(@network.id), :delete
