CIMI client: fix typo fcgp->fgcp

--- a/clients/cimi/views/layout.haml
+++ b/clients/cimi/views/layout.haml
@@ -37,7 +37,7 @@
                     %li
                       %a{ :href => '#providerModal', :onclick => "toggleConfig('vsphere')"} VSphere
                     %li
-                      %a{ :href => '#providerModal', :onclick => "toggleConfig('fcgp')"} FCGP
+                      %a{ :href => '#providerModal', :onclick => "toggleConfig('fgcp')"} FGCP
                     %li
                       %a{ :href => '#providerModal', :onclick => "toggleConfig('gogrid')"} GoGrid
             .pull-right{ :style => 'margin-top: 9px;'}
