CIMI: use id instead of name in urls in client UI

--- a/clients/cimi/views/credentials/show.haml
+++ b/clients/cimi/views/credentials/show.haml
@@ -15,8 +15,8 @@
   %p
     %a{ :href => "#{@cred.id}?format=xml", :class => 'label warning' } XML
     %a{ :href => "#{@cred.id}?format=json", :class => 'label warning' } JSON
-  %p
-    %form{ :action => "/cimi/credentials/#{@cred.name}/delete", :method => :post, :style => 'display:inline'}
+  %p}
+    %form{ :action => "/cimi/credentials/#{href_to_id @cred.id}/delete", :method => :post, :style => 'display:inline'}
       %input{ :type => :hidden, :name => '_method', :value => 'delete'}
       %button{ :class => 'btn btn-danger'} Destroy
 
